--- a/action.yml
+++ b/action.yml
@@ -243,7 +243,7 @@ runs:
         current_time=$(date +"%Y/%m/%d %H:%M:%S")
         echo "SRG_ACTION_TRIGGER_TIME=${current_time}" >> $GITHUB_ENV
         
-        
+        pwd=$(pwd)
         ticket_list=$(cat "${pwd}/${{ env.SRG_OUTPUT_TICKETS_FILE }}")
         echo "SRG_ACTION_TICKET_LIST=${ticket_list}" >> $GITHUB_ENV
         
