--- a/action.yml
+++ b/action.yml
@@ -244,10 +244,12 @@ runs:
         echo "SRG_ACTION_TRIGGER_TIME=${current_time}" >> $GITHUB_ENV
         
         pwd=$(pwd)
-        ticket_list=$(cat "${pwd}/${{ env.SRG_OUTPUT_TICKETS_FILE }}")
+        #ticket_list=$(cat "${pwd}/${{ env.SRG_OUTPUT_TICKETS_FILE }}")
+        ticket_list=$(tr '\n' ' ' < "${pwd}/${{ env.SRG_OUTPUT_TICKETS_FILE }}")
         echo "SRG_ACTION_TICKET_LIST=${ticket_list}" >> $GITHUB_ENV
-        
-        commits_list=$(cat "${pwd}/${{ env.SRG_OUTPUT_COMMITS_FILE }}")
+
+        commits_list=$(tr '\n' ' ' < "${pwd}/${{ env.SRG_OUTPUT_COMMITS_FILE }}")
+        #commits_list=$(cat "${pwd}/${{ env.SRG_OUTPUT_COMMITS_FILE }}")
         echo "SRG_ACTION_COMMITS_LIST=${commits_list}" >> $GITHUB_ENV
       shell: bash
       if: ${{ github.event_name == 'pull_request' }}
