--- a/action.yml
+++ b/action.yml
@@ -279,7 +279,16 @@ runs:
         # echo "$ticket_list" >> $GITHUB_ENV
         # echo "EOF" >> $GITHUB_ENV
 
-        commits_list=$(tr '\n' ';' < "${pwd}/${{ env.SRG_OUTPUT_COMMITS_FILE }}")
+        # commits_list=$(tr '\n' ';' < "${pwd}/${{ env.SRG_OUTPUT_COMMITS_FILE }}")
+        commits_list=""
+        while IFS= read -r line; do
+          echo "$line"
+          if [ ! -z "$line" ]; then
+            commits_list="${commits_list}${line}\n"
+          fi
+        done < "${pwd}/${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+
+
         #commits_list=$(cat "${pwd}/${{ env.SRG_OUTPUT_COMMITS_FILE }}")
         echo "SRG_ACTION_COMMITS_LIST=${commits_list}" >> $GITHUB_ENV
       shell: bash
