--- a/action.yml
+++ b/action.yml
@@ -268,7 +268,10 @@ runs:
         ticket_list=""
         while IFS= read -r line; do
           echo "$line"
-          if [ ! -z "$line" ]; then
+          if [[ $line == $(tail -n1 "${pwd}/${{ env.SRG_OUTPUT_TICKETS_FILE }}") ]]; then
+            ticket_list="${ticket_list}${line}"
+            echo "This is the last line: $line"
+          else
             ticket_list="${ticket_list}${line}\n"
           fi
         done < "${pwd}/${{ env.SRG_OUTPUT_TICKETS_FILE }}"
