--- a/action.yml
+++ b/action.yml
@@ -167,7 +167,15 @@ runs:
 
         echo "------------------ cat ${{ env.SRG_COMMITS_FILE }} --------------------"
         cat "${{ env.SRG_COMMITS_FILE }}"
+        echo "kkkkkkkkkkkkkkkkkk"
+        cat "${{ env.SRG_PR_CONTENT_TXT }}"
+        echo "kkkkkkkkkkkkkkkkkk"
 
+
+        # if [ -f "/path/to/file" ]; then
+        #   echo "File \"/path/to/file\" exists"
+        # fi
+        
         echo "------------------ extract commit message --------------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}" | grep -i -E "(${pattern_commit_convention}):"  | sed -e 's/([^()]*)//g' | sed 's/;/,/g'| sort -u | sort -n > "${{ env.SRG_OUTPUT_COMMITS_FILE }}" 
         cat "${{ env.SRG_COMMITS_FILE }}" | grep -i -E "(${pattern_commit_convention}):" | sed -e 's/([^()]*)//g' | sed 's/;/,/g'| sort -u | sort -n >> "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
