--- a/action.yml
+++ b/action.yml
@@ -189,10 +189,10 @@ runs:
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         echo "cccccccccccccccccc"
         
-        cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}" | sort -u | sort -n > temp.txt
-        cat temp.txt > "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
-        rm -f temp.txt
-        cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+        # cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}" | sort -u | sort -n > temp.txt
+        # cat temp.txt > "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+        # rm -f temp.txt
+        # cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
 
         echo "------------------ extract jira ticket --------------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_COMMITS_FILE }}" | grep -Eo "${pattern_jira_tickets}" | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
