--- a/action.yml
+++ b/action.yml
@@ -98,7 +98,7 @@ runs:
         echo ""
         echo "SRG_PR_CONTENT_TXT=srg_temp_pr_and_branch_info.txt" >> $GITHUB_ENV
         echo "SRG_TEMP_FILE=srg_temp.txt" >> $GITHUB_ENV
-        echo "SRG_COMMITS_FILE=srg_temp_commits.txt" >> $GITHUB_ENV
+        echo "SRG_TEMP_COMMITS_FILE=srg_temp_commits.txt" >> $GITHUB_ENV
         echo "SRG_OUTPUT_CHANGLOG_FILE=srg_output_changelog.md" >> $GITHUB_ENV
         echo "SRG_OUTPUT_TICKETS_FILE=srg_output_tickets.txt" >> $GITHUB_ENV
         echo "SRG_OUTPUT_COMMITS_FILE=srg_output_commits.txt" >> $GITHUB_ENV
@@ -130,8 +130,9 @@ runs:
 
         cat "./${{ env.SRG_TEMP_FILE}}"
         echo "---------------------------------------------"
-        cat "./${{ env.SRG_TEMP_FILE}}" | jq -r '.[] | "\(.commit.message)"' > "./${{ env.SRG_COMMITS_FILE }}"
-        cat "./${{ env.SRG_COMMITS_FILE }}"
+        cat "./${{ env.SRG_TEMP_FILE}}" | jq -r '.[] | "\(.commit.message)"' > "./${{ env.SRG_TEMP_COMMITS_FILE }}"
+        echo "" >> "./${{ env.SRG_TEMP_COMMITS_FILE }}"
+        cat "./${{ env.SRG_TEMP_COMMITS_FILE }}"
 
         # else
         #   echo "Pull request was not merged, unable to retrieve commits."
@@ -169,11 +170,14 @@ runs:
         pattern_commit_convention="${{ inputs.pattern_commit_convention }}"
         pattern_jira_tickets="${{ inputs.pattern_jira_tickets }}"
 
-        echo "------------------ cat ${{ env.SRG_COMMITS_FILE }} --------------------"
-        cat "${{ env.SRG_COMMITS_FILE }}"
-        echo "cccccccccccckkkkkkkkkkkkkkkkkk"
+        echo "------------------ cat ${{ env.SRG_TEMP_COMMITS_FILE }} --------------------"
+        cat "${{ env.SRG_TEMP_COMMITS_FILE }}"
+        echo "----------------------------------------------------------------------------"
+        echo ""
+        echo "------------------ cat ${{ env.SRG_PR_CONTENT_TXT }} --------------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}"
-        echo "ppppppppppppkkkkkkkkkkkkkkkkkk"
+        echo "----------------------------------------------------------------------------"
+
 
 
         # if [ -f "/path/to/file" ]; then
@@ -182,7 +186,7 @@ runs:
         touch "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         echo "------------------ extract commit message --------------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}" | grep -i -E "(${pattern_commit_convention}):" || (echo "" && true)  | sed -e 's/([^()]*)//g' | sed 's/;/,/g'| sort -u | sort -n >> "${{ env.SRG_OUTPUT_COMMITS_FILE }}" 
-        cat "${{ env.SRG_COMMITS_FILE }}" | grep -i -E "(${pattern_commit_convention}):" || (echo "" && true)  | sed -e 's/([^()]*)//g' | sed 's/;/,/g'| sort -u | sort -n >> "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
+        cat "${{ env.SRG_TEMP_COMMITS_FILE }}" | grep -i -E "(${pattern_commit_convention}):" || (echo "" && true)  | sed -e 's/([^()]*)//g' | sed 's/;/,/g'| sort -u | sort -n >> "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         
         echo "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
@@ -194,8 +198,8 @@ runs:
         # cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
 
         echo "------------------ extract jira ticket --------------------"
-        cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_COMMITS_FILE }}" | grep -Eo "${pattern_jira_tickets}" | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
-        # cat "${{ env.SRG_COMMITS_FILE }}" | grep -Eo "${pattern_jira_tickets}" | sort -u | sort -n >> "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
+        cat "${{ env.SRG_PR_CONTENT_TXT }}" "${{ env.SRG_TEMP_COMMITS_FILE }}" | grep -Eo "${pattern_jira_tickets}" | sort -u | sort -n > "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
+        # cat "${{ env.SRG_TEMP_COMMITS_FILE }}" | grep -Eo "${pattern_jira_tickets}" | sort -u | sort -n >> "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         echo "jjjjjjjjjjjjjjjjjjjj"
         cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}" | sort -u | sort -n > temp.txt && mv temp.txt ${{ env.SRG_OUTPUT_TICKETS_FILE }}
@@ -218,9 +222,9 @@ runs:
             echo "- [$ticket_id](${ticket_link})" >>"${{ env.SRG_OUTPUT_CHANGLOG_FILE }}"
 
             if [ "$RUNNER_OS" == "Linux" ]; then
-              sed -i "s/$ticket_id/[${ticket_id}]($ticket_link_sed_form)/g" "${{ env.SRG_COMMITS_FILE }}"
+              sed -i "s/$ticket_id/[${ticket_id}]($ticket_link_sed_form)/g" "${{ env.SRG_TEMP_COMMITS_FILE }}"
             elif [ "$RUNNER_OS" == "macOS" ]; then
-              sed -i '' "s/$ticket_id/[${ticket_id}]($ticket_link_sed_form)/g" "${{ env.SRG_COMMITS_FILE }}"
+              sed -i '' "s/$ticket_id/[${ticket_id}]($ticket_link_sed_form)/g" "${{ env.SRG_TEMP_COMMITS_FILE }}"
             else
               echo "\$RUNNER_OS is not supported"
               exit 1
@@ -252,7 +256,7 @@ runs:
         echo "------------- pull_request closed and merged ------------"
         rm -f "${{ env.SRG_PR_CONTENT_TXT }}"
         rm -f "${{ env.SRG_TEMP_FILE }}"
-        rm -f "${{ env.SRG_COMMITS_FILE }}"
+        rm -f "${{ env.SRG_TEMP_COMMITS_FILE }}"
       shell: bash
       if: ${{ github.event_name == 'pull_request' }}
 
