--- a/action.yml
+++ b/action.yml
@@ -174,6 +174,7 @@ runs:
         cat "${{ env.SRG_TEMP_COMMITS_FILE }}"
         echo "----------------------------------------------------------------------------"
         echo ""
+        echo "" >> "${{ env.SRG_PR_CONTENT_TXT }}"
         echo "------------------ cat ${{ env.SRG_PR_CONTENT_TXT }} --------------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}"
         echo "----------------------------------------------------------------------------"
